<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.devonfw</groupId>
    <artifactId>maven-parent</artifactId>
    <version>14</version>
  </parent>
  <groupId>com.devonfw.tools.IDEasy.dev</groupId>
  <artifactId>ide</artifactId>
  <packaging>pom</packaging>
  <!-- dev-SNAPSHOT is used to avoid that this POM gets officially release to maven central -->
  <version>dev-SNAPSHOT</version>
  <name>${project.artifactId}</name>
  <description>This project provides automatic setup and update of the local development environment.</description>

  <properties>
    <github.repository>IDEasy</github.repository>
    <ide_version>${revision}</ide_version>
    <java.version>25</java.version>
    <jline.version>3.30.13</jline.version>
    <jansi.version>2.4.1</jansi.version>
    <jackson.version>2.18.3</jackson.version>
    <xmlunit.version>2.11.0</xmlunit.version>
    <wiremock.version>3.11.0</wiremock.version>
    <javafx.version>25</javafx.version>
    <testfx.version>4.0.18</testfx.version>
    <native.maven.plugin.version>0.10.6</native.maven.plugin.version>
    <assembly.maven.plugin.version>3.7.1</assembly.maven.plugin.version>
    <build.helper.maven.plugin.version>3.6.1</build.helper.maven.plugin.version>
    <graalvm.version>25.0.3</graalvm.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>1.27.1</version>
      </dependency>
      <dependency>
        <groupId>jakarta.json</groupId>
        <artifactId>jakarta.json-api</artifactId>
        <version>2.1.3</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.parsson</groupId>
        <artifactId>parsson</artifactId>
        <version>1.1.9</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-jsr310</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.dataformat</groupId>
        <artifactId>jackson-dataformat-xml</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>org.graalvm.sdk</groupId>
        <artifactId>nativeimage</artifactId>
        <version>${graalvm.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>5.12.2</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.27.3</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>2.0.17</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.5.18</version>
      </dependency>
      <dependency>
        <groupId>me.tongfei</groupId>
        <artifactId>progressbar</artifactId>
        <version>0.10.2</version>
      </dependency>
      <dependency>
        <groupId>org.jline</groupId>
        <artifactId>jline-terminal</artifactId>
        <version>${jline.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jline</groupId>
        <artifactId>jline-native</artifactId>
        <version>${jline.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jline</groupId>
        <artifactId>jline</artifactId>
        <version>${jline.version}</version>
      </dependency>
      <dependency>
        <groupId>org.fusesource.jansi</groupId>
        <artifactId>jansi</artifactId>
        <version>${jansi.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>5.17.0</version>
      </dependency>
      <dependency>
        <!-- required for advanced mocking -->
        <groupId>net.bytebuddy</groupId>
        <artifactId>byte-buddy</artifactId>
        <version>1.18.7</version>
      </dependency>
      <dependency>
        <groupId>org.xmlunit</groupId>
        <artifactId>xmlunit-core</artifactId>
        <version>${xmlunit.version}</version>
      </dependency>
      <dependency>
        <groupId>org.xmlunit</groupId>
        <artifactId>xmlunit-assertj3</artifactId>
        <version>${xmlunit.version}</version>
      </dependency>
      <dependency>
        <groupId>org.wiremock</groupId>
        <artifactId>wiremock</artifactId>
        <version>3.13.2</version>
      </dependency>
      <dependency>
        <groupId>org.testfx</groupId>
        <artifactId>openjfx-monocle</artifactId>
        <version>21.0.2</version>
      </dependency>
      <dependency>
        <groupId>org.testfx</groupId>
        <artifactId>testfx-junit5</artifactId>
        <version>${testfx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.testfx</groupId>
        <artifactId>testfx-core</artifactId>
        <version>${testfx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-fxml</artifactId>
        <version>${javafx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-controls</artifactId>
        <version>${javafx.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>


  <modules>
    <module>documentation</module>
    <module>cli</module>
    <module>gui</module>
    <module>url-updater</module>
    <module>security</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <configuration>
          <updatePomFile>true</updatePomFile>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.13</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.pitest</groupId>
        <artifactId>pitest-maven</artifactId>
        <version>1.19.1</version>
        <dependencies>
          <dependency>
            <groupId>org.pitest</groupId>
            <artifactId>pitest-junit5-plugin</artifactId>
            <version>1.2.2</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>deploy</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.7.0</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>repository</serverId>
              <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>true</autoReleaseAfterClose>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <developers>
    <developer>
      <id>hohwille</id>
      <name>J&#246;rg Hohwiller</name>
      <email>hohwille@users.sourceforge.net</email>
      <organization>Capgemini</organization>
      <organizationUrl/>
      <roles>
        <role>admin</role>
        <role>designer</role>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
      <properties/>
    </developer>
    <developer>
      <id>trippl</id>
      <name>Thomas Rippl</name>
      <email></email>
      <organization></organization>
      <organizationUrl/>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
      <properties/>
    </developer>
    <developer>
      <id>markusschuh</id>
      <name>Markus Schuh</name>
      <email></email>
      <organization>Capgemini</organization>
      <organizationUrl/>
      <roles>
        <role>contributor</role>
      </roles>
      <timezone>+1</timezone>
      <properties/>
    </developer>
    <developer>
      <id>maybeec</id>
      <name>Malte Brunnlieb</name>
      <email></email>
      <organization>Capgemini</organization>
      <organizationUrl/>
      <roles>
        <role>contributor</role>
      </roles>
      <timezone>+1</timezone>
      <properties/>
    </developer>
    <developer>
      <id>ediekman</id>
      <name>Erik Diekmann</name>
      <email></email>
      <organization>Capgemini</organization>
      <organizationUrl/>
      <roles>
        <role>contributor</role>
      </roles>
      <timezone>+1</timezone>
      <properties/>
    </developer>
    <developer>
      <id>nricheton</id>
      <name>Nicolas Richeton</name>
      <email></email>
      <organization>Capgemini</organization>
      <organizationUrl/>
      <roles>
        <role>contributor</role>
      </roles>
      <timezone>+1</timezone>
      <properties/>
    </developer>
  </developers>
</project>
